--- a/menu_management/templates/second_menu_manage.html
+++ b/menu_management/templates/second_menu_manage.html
@@ -33,6 +33,11 @@
         {% endfor %}
         </tbody>
     </table>
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+            {{ page_html|safe }}
+        </ul>
+    </nav>
     <div>
         {% include 'tags_html/add_second_tag.html' %}
         <a href="/menu/check/first/" class="btn btn-warning">返回</a>
