--- a/templates/mail_pictures/form_mail.html
+++ b/templates/mail_pictures/form_mail.html
@@ -14,8 +14,8 @@
             <option value="2">已读</option>
         </select>
         <button type="button" class="btn btn-primary fuzzy-query" id="fuzzy-query">查询</button>
-        <a href="/fhsms/form_mail/"><button type="button" class="btn btn-primary">收件箱</button></a>
-        <a href="/fhsms/to_mail/"><button type="button" class="btn btn-primary">发件箱</button></a>
+        <button type="button" class="btn btn-primary">收件箱</button>
+        <button type="button" class="btn btn-primary">发件箱</button>
     </div>
     <div class="mail_list" style="margin-top: 20px; text-align: center">
         <div class="table-responsive">
@@ -32,75 +32,75 @@
                 </thead>
                 <tbody>
                 {% for mail in mail_list %}
-                    <tr>
-                        <td><input type="checkbox" value="{{ mail.id }}" id="onclick_checkbox"
-                                   name="onclick_checkbox"></td>
-                        <td>{{ forloop.counter }}</td>
-                        <td>{{ mail.title }}</td>
-                        <td>{{ mail.to_user }}</td>
-                        <td>{{ mail.from_user.username }}</td>
-                        <td>{{ mail.create_time }}</td>
-                        <td>{{ mail.status_id.status }}</td>
-                        <td>
-                            <button type="button" class="btn btn-info" data-toggle="modal"
-                                    data-target="#search-one{{ forloop.counter }}" id="one_search{{ mail.id }}"
-                                    value="{{ mail.id }}">查看
-                            </button>
+                        <tr>
+                            <td><input type="checkbox" value="{{ mail.id }}" id="onclick_checkbox"
+                                       name="onclick_checkbox"></td>
+                            <td>{{ forloop.counter }}</td>
+                            <td>{{ mail.title }}</td>
+                            <td>{{ mail.to_user }}</td>
+                            <td>{{ mail.from_user.username }}</td>
+                            <td>{{ mail.create_time }}</td>
+                            <td>{{ mail.status_id.status }}</td>
+                            <td>
+                                <button type="button" class="btn btn-info" data-toggle="modal"
+                                        data-target="#search-one{{ forloop.counter }}" id="one_search{{ mail.id }}"
+                                        value="{{ mail.id }}">查看
+                                </button>
 
-                            <button type="button" class="btn btn-danger" data-toggle="modal"
-                                    data-target="#one_del{{ forloop.counter }}" id="one_del">删除
-                            </button>
-                            <a href="https://mail.163.com/">
-                                <button type="button" class="btn btn-warning">回复</button>
-                            </a>
-                        </td>
-                    </tr>
-                    <div class="modal fade" id="one_del{{ forloop.counter }}" tabindex="-1" role="dialog"
-                         aria-labelledby="myModalLabel">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content search-one-modal" style="width: 300px;left: 160px;">
-                                <div class="modal-header">
-                                    确认删除{{ mail.title }}吗？
+                                <button type="button" class="btn btn-danger" data-toggle="modal"
+                                        data-target="#one_del">删除
+                                </button>
+                                <div class="modal fade" id="one_del" tabindex="-1" role="dialog"
+                                     aria-labelledby="myModalLabel">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content del-one-modal" style="width: 300px;left: 160px;">
+                                            <div class="modal-header">
+                                                确定{{ mail.title }}删除吗？
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-default">
+                                                    关闭
+                                                </button>
+                                                <a href="fhsms/del_fhsms/nid={{ mail.id }}/">
+                                                    <button type="button" class="btn btn-primary">确认删除</button>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">
-                                        取消
-                                    </button>
-                                    <a href="fhsms/del_fhsms/nid={{ mail.id }}/">
-                                        <button type="button" class="btn btn-primary">确认删除</button>
-                                    </a>
+                                <a href="https://mail.163.com/">
+                                    <button type="button" class="btn btn-warning">回复</button>
+                                </a>
+                            </td>
+                        </tr>
+                        <div class="modal fade" id="search-one{{ forloop.counter }}" tabindex="-1" role="dialog"
+                             aria-labelledby="myModalLabel">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content search-one-modal">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true"">&times;</span></button>
+                                        站内信
+                                    </div>
+                                    <div class="modal-body search-one-body">
+                                        <div class="email_body1">
+                                            <span>发送人：{{ mail.to_user }}</span>
+                                            <span style="margin-left: 80px">收件人：{{ mail.from_user }}</span>
+                                        </div>
+                                        <div class="email_body2">
+                                            <p>{{ mail.content }}</p>
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <a href="fhsms/chang/id={{ mail.id }}/">
+                                            <button type="button" class="btn btn-default">
+                                                关闭
+                                            </button>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="modal fade" id="search-one{{ forloop.counter }}" tabindex="-1" role="dialog"
-                         aria-labelledby="myModalLabel">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content search-one-modal">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true"">&times;</span></button>
-                                    站内信
-                                </div>
-                                <div class="modal-body search-one-body">
-                                    <div class="email_body1">
-                                        <span>发送人：{{ mail.to_user }}</span>
-                                        <span style="margin-left: 80px">收件人：{{ mail.from_user }}</span>
-                                    </div>
-                                    <div class="email_body2">
-                                        <p>{{ mail.content }}</p>
-                                    </div>
-                                </div>
-                                <div class="modal-footer">
-                                    <a href="fhsms/chang/id={{ mail.id }}/">
-                                        <button type="button" class="btn btn-default">
-                                            关闭
-                                        </button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 {% endfor %}
                 </tbody>
             </table>
