--- a/templates/mail_pictures/to_mail.html
+++ b/templates/mail_pictures/to_mail.html
@@ -14,8 +14,8 @@
             <option value="2">已读</option>
         </select>
         <button type="button" class="btn btn-primary fuzzy-query" id="fuzzy-query">查询</button>
-        <a href="/fhsms/form_mail/"><button type="button" class="btn btn-primary">收件箱</button></a>
-        <a href="/fhsms/to_mail/"><button type="button" class="btn btn-primary">发件箱</button></a>
+        <button type="button" class="btn btn-primary">收件箱</button>
+        <button type="button" class="btn btn-primary">发件箱</button>
     </div>
     <div class="mail_list" style="margin-top: 20px; text-align: center">
         <div class="table-responsive">
@@ -48,31 +48,31 @@
                             </button>
 
                             <button type="button" class="btn btn-danger" data-toggle="modal"
-                                    data-target="#one_del{{ forloop.counter }}" id="one_del">删除
+                                    data-target="#one_del">删除
                             </button>
+                            <div class="modal fade" id="one_del" tabindex="-1" role="dialog"
+                                 aria-labelledby="myModalLabel">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content del-one-modal" style="width: 300px;left: 160px;">
+                                        <div class="modal-header">
+                                            确定{{ mail.title }}删除吗？
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-default">
+                                                关闭
+                                            </button>
+                                            <a href="fhsms/del_fhsms/nid={{ mail.id }}/">
+                                                <button type="button" class="btn btn-primary">确认删除</button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <a href="https://mail.163.com/">
                                 <button type="button" class="btn btn-warning">回复</button>
                             </a>
                         </td>
                     </tr>
-                    <div class="modal fade" id="one_del{{ forloop.counter }}" tabindex="-1" role="dialog"
-                         aria-labelledby="myModalLabel">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content search-one-modal" style="width: 300px;left: 160px;">
-                                <div class="modal-header">
-                                    确认删除{{ mail.title }}吗？
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">
-                                        取消
-                                    </button>
-                                    <a href="fhsms/del_fhsms/nid={{ mail.id }}/">
-                                        <button type="button" class="btn btn-primary">确认删除</button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="modal fade" id="search-one{{ forloop.counter }}" tabindex="-1" role="dialog"
                          aria-labelledby="myModalLabel">
                         <div class="modal-dialog" role="document">
