--- a/templates/user_management_html/user_info.html
+++ b/templates/user_management_html/user_info.html
@@ -331,9 +331,41 @@
                             </script>
                             <!-- 站内信 end -->
                             <!-- 短信start-->
-                            <a class="btn btn-xs btn-warning" title="发送短信" >
-                                <i class="ace-icon fa fa-envelope-o bigger-120" title="发送短信" ></i>
+                            <a class="btn btn-xs btn-warning" title="发送短信" data-toggle="modal"
+                               data-target="#messmyModal{{ forloop.counter }}">
+                                <i class="ace-icon fa fa-envelope-o bigger-120" title="发送短信"></i>
                             </a>
+                            <div class="modal fade" id="messmyModal{{ forloop.counter }}" tabindex="-1" role="dialog"
+                                 aria-labelledby="myModalLabel">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content mail_modal">
+                                        <form method="post" action="/user_management/send_message/">
+                                            {% csrf_token %}
+                                            <div class="modal-header">
+
+
+                                                姓名：<input type="text" name="mes_username"
+                                                          value={{ user.user.username }}>
+                                                手机号：<input name="mes_phone" value={{ user.user_phone }}>
+
+
+                                            </div>
+                                            <div class="modal-body">
+
+
+                                                验证码：<input name="mes_content" placeholder="输入您发送的六位验证码">
+
+
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                                                </button>
+                                                <button type="submit" class="btn btn-primary" id="sendmail">发送</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
 
                             <!-- 短信end-->
 
@@ -601,7 +633,7 @@
                                             <input type="text" class="form-control" id="adduser_number"
                                                    name="adduser_number"
                                                    placeholder="在这里输入编号">
-                                            <span id="message"></span>
+                                            <span id="message" style="color: red"></span>
                                         </div>
                                     </div>
 
@@ -609,9 +641,9 @@
                                         <label for="username" class="col-sm-2 control-label"><span
                                                 style="color: red"> * </span>身份证号：</label>
                                         <div class="col-sm-5">
-                                            <input type="text" class="form-control" id="user_id_card"
-                                                   name="user_id_card" placeholder="请在这里输入身份证号">
-                                            <span id="cardmessage"></span>
+                                            <input type="text" class="form-control" id="ckuser_id_card"
+                                                   name="ckuser_id_card" placeholder="请在这里输入身份证号">
+                                            <span id="cardmessage" style="color: red"></span>
                                         </div>
                                     </div>
 
@@ -647,7 +679,7 @@
                                                 style="color: red"> * </span>手机：</label>
                                         <div class="col-sm-5">
                                             <input type="text" class="form-control" id="ckuser_phone"
-                                                   name="ckuser_phone" placeholder="请在这里输入11位手机号" style="color: red">
+                                                   name="ckuser_phone" placeholder="请在这里输入11位手机号">
                                             <span id="phonemessage" style="color: red"></span>
 
                                         </div>
@@ -696,7 +728,7 @@
 
                                         <a href="/user_management/user_info/"
                                            class="btn btn-danger">取消</a>
-                                        <button type="submit" class="btn btn-default">
+                                        <button type="submit" class="btn btn-default" id="save">
                                             保存
                                         </button>
                                     </div>
@@ -776,27 +808,57 @@
             </script>
 
 
-            <a class="btn btn-xs btn-info" title="批量发送电子邮件">
-                <i class="ace-icon fa fa-envelope bigger-120" title="批量发送电子邮件" style="height: 20px"></i>
+            <!-- 群发短信start-->
+            <a class="btn btn-xs btn-warning" title="发送短信" data-toggle="modal"
+               data-target="#qmessmyModal">
+                <i class="ace-icon fa fa-envelope-o bigger-120" title="发送短信" style="height: 20px" id="sendallmess"></i>
             </a>
-            <a class="btn btn-xs btn-warning" title="发送短信" onclick="sendSms('15153203821');">
-                <i class="ace-icon fa fa-envelope-o bigger-120" title="发送短信" style="height: 20px"></i>
-            </a>
+            <div class="modal fade" id="qmessmyModal" tabindex="-1" role="dialog"
+                 aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content mail_modal">
+
+                        {% csrf_token %}
+                        <div class="modal-header">
+
+                        </div>
+                        <div class="modal-body">
+
+
+                            验证码：<input name="mes_content" id="allsms" placeholder="输入您发送的六位验证码">
+
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                            </button>
+                            <a class="btn btn-primary" id="send_allmess">发送</a>
+                        </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 群发短信end-->
 
 
             <!-- 小功能上-->
 
         </div>
+        <span id="csrf" style="display: none">{{ csrf_token }}</span>
 
 
     </div>
     </div>
     <!-- 实现全选的功能 当下面的全部选中的时候 全选按钮也应该被选中 当全选时候，有一个取消的时候全选也跟着取消-->
-    <script src="/static/js/check_box.js">
-    </script>
-{#    <script src="/static/user_management/phone.js"></script>#}
-{#    <script src="/static/user_management/id_card.js"></script>#}
-        <script src="/static/mail.js"></script>
+    <!-- 验证输入的字段 start-->
+    <script src="/static/js/check_box.js"></script>
+    <script src="/static/user_management/phone.js"></script>
+    <script src="/static/user_management/id_card.js"></script>
+    <script src="/static/mail.js"></script>
+    <!-- 群发短信-->
+    <script src="/static/user_management/Group_sms.js"></script>
+
     <script>
         {#$("body").delegate(".for_delete", "click", function () {#}
         {#    swal({#}
@@ -889,12 +951,15 @@
 
                             $("#message").text("编号已被占用");
 
-                            {#$('#message').css('display','none');#}
+                            {#$('#save').css('display','none');#}
+                            $('#save').addClass("disabled");
 
                         }
                         else {
                             <!-- $('#message').css('display','none'); 不能这样设置 当第二次判断的时候 即使是错的的也无法进行错误提示显示  -->
                             $("#message").text("");
+
+                            $('#save').removeClass("disabled");
 
                         }
                     }
@@ -927,6 +992,30 @@
                 });
 
             }
+
+            {#else {#}
+            {##}
+            {#    $.ajax({#}
+            {#        url: "/user_management/all_email/",#}
+            {#        type: "post",#}
+            {#        traditional: true,#}
+            {#        data: {#}
+            {#            "delete_id_list": delete_id_list,#}
+            {#            'title': title,#}
+            {#            'content': content,#}
+            {#            "csrfmiddlewaretoken": "{{ csrf_token }}"#}
+            {#        },#}
+            {#        success: function (data) {#}
+            {##}
+            {#            if (data.status)#}
+            {#                alert('发送成功')#}
+            {#            window.location.reload()#}
+            {#        }#}
+            {#    });#}
+            {##}
+            {##}
+            {# }#}
+
 
         });
 
@@ -964,7 +1053,7 @@
             });
 
 
-        });
+         });
 
 
     </script>
