--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <!-- Google Fonts-->
     <link href='/static/assets/css/abc.css' rel='stylesheet' type='text/css'/>
     <link href="/static/css/base.css" rel="stylesheet" type="text/css"/>
-    <script src="/static/js/jquery-2.1.4.min.js"></script>
+    <script src="/static/js/jquery-3.3.1.min.js"></script>
     {% block css %}{% endblock %}
     {% block js %}{% endblock %}
 </head>
@@ -197,17 +197,15 @@
 <!-- /. WRAPPER  -->
 <!-- JS Scripts-->
 <!-- jQuery Js -->
-<script src="/static/assets/js/jquery-1.10.2.js"></script>
 <!-- Bootstrap Js -->
 <script src="/static/assets/js/bootstrap.min.js"></script>
-
 <!-- Metis Menu Js -->
 <script src="/static/assets/js/jquery.metisMenu.js"></script>
 <!-- Morris Chart Js -->
 <script src="/static/assets/js/morris/raphael-2.1.0.min.js"></script>
 <script src="/static/assets/js/morris/morris.js"></script>
 
-
+<script src="/static/mail/mail_js/mail-click.js"></script>
 <script src="/static/assets/js/easypiechart.js"></script>
 <script src="/static/assets/js/easypiechart-data.js"></script>
 
