--- a/templates/mail_pictures/fhsms.html
+++ b/templates/mail_pictures/fhsms.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="/static/mail/mail_modal.css"/>
     <div class="input-group input-search">
         <input type="text" class="form-control" id="search_id" name="search_id" placeholder="请输入关键字">
-        <input type="date" class="form-control" id="action-time" name="action-time" value="">
-        <input type="date" class="form-control" id="end-time" name="end-time" value="">
+        <input type="date" class="form-control" id="action-time" name="action-time" value="" style="display: none">
+        <input type="date" class="form-control" id="end-time" name="end-time" value="" style="display: none">
         <!--<i class="am-icon-search search" id="q_i"></i>-->
         <select class="form-control" name="select_text" id="select_text">
             <option value="0">全部</option>
