--- a/menu_management/templates/second_menu_manage.html
+++ b/menu_management/templates/second_menu_manage.html
@@ -45,4 +45,65 @@
 
     <script src="/static/js/jquery-3.3.1.min.js"></script>
     <script src="/static/js/csrfajax.js"></script>
+    <script src="/static/js/menu_second_management.js">
+        {#$('body').delegate('#second_menu_name', 'blur', function () {#}
+        {#    var menu_name = $(this).val();#}
+            {#console.log($('#second_prompt').css('display'));#}
+        {#    $.ajax({#}
+        {#        url: '/menu/add/second/',#}
+        {#        type: 'get',#}
+        {#        data: {#}
+        {#            'menu_name': menu_name#}
+        {#        },#}
+        {#        success: function (data) {#}
+        {#            if (data.span == '1') {#}
+        {#                $('#second_prompt').css('display', 'block');#}
+        {#                $('#second_btn').attr('disabled', 'disabled')#}
+        {#            }#}
+        {#            else {#}
+        {#                $('#second_prompt').css('display', 'none');#}
+        {#                // 只有path和title全部通过校验提交按钮才可以点击#}
+        {#                if ($('#second_path_prompt').css('display') == 'none' && $('#second_prompt').css('display') == 'none') {#}
+        {#                    $('#second_btn').removeAttr('disabled')#}
+        {#                }#}
+        {#            }#}
+        {#            console.log($('#menu_path').val().length);#}
+        {#            if ($('#second_menu_name').val().length == 0 || $('#menu_path').val().length == 0) {#}
+                        {#console.log($('#second_menu_name').val().length);#}
+        {#                $('#second_btn').attr('disabled', 'disabled')#}
+        {#            }#}
+        {#        }#}
+        {#    });#}
+        {# });#}
+        {#$('body').delegate('#menu_path', 'blur', function () {#}
+        {#    var menu_path = $(this).val();#}
+        {#    $.ajax({#}
+        {#        url: '/menu/add/second/',#}
+        {#        type: 'get',#}
+        {#        data: {#}
+        {#            'menu_path': menu_path#}
+        {#        },#}
+        {#        success: function (data) {#}
+        {#            if (data.span == '2') {#}
+        {#                $('#second_path_prompt').css('display', 'block');#}
+        {#                $('#second_btn').attr('disabled', 'disabled')#}
+        {#            }#}
+        {#            if (data.span == '3') {#}
+        {#                $('#second_path_prompt').css('display', 'none');#}
+        {#                // 只有path和title全部通过校验提交按钮才可以点击#}
+        {#                if ($('#second_path_prompt').css('display') == 'none' && $('#second_prompt').css('display') == 'none') {#}
+        {#                    $('#second_btn').removeAttr('disabled')#}
+        {#                }#}
+        {#            }#}
+        {#            if ($('#second_menu_name').val().length == 0 || $('#menu_path').val().length == 0) {#}
+        {#                $('#second_btn').attr('disabled', 'disabled')#}
+        {#            }#}
+        {#        }#}
+        {#    });#}
+        {# });#}
+        {#if ($('#second_menu_name').val().length == 0 || $('#menu_path').val().length == 0) {#}
+        {#    $('#second_btn').attr('disabled', 'disabled')#}
+        {# }#}
+    </script>
+
 {% endblock %}
