--- a/menu_management/templates/tags_html/edit_second_tag.html
+++ b/menu_management/templates/tags_html/edit_second_tag.html
@@ -19,12 +19,11 @@
                                        placeholder="请输入菜单名称">
                                 <p style="color: red; display: none;text-align: center" id="edit_second_prompt{{ i.nid }}">该菜单名已经存在</p>
                             </div>
-
                         </div>
                         <div class="form-group">
-                            <label for="menu_path" class="col-sm-3 control-label">请输入菜单路径</label>
+                            <label for="edit_menu_path" class="col-sm-3 control-label">请输入菜单路径</label>
                             <div class="col-sm-9">
-                                <input menuid="{{ i.nid }}" type="text" id="menu_path" class="form-control edit_second_menupath" name="menu_path"
+                                <input menuid="{{ i.nid }}" type="text" id="edit_menu_path" class="form-control edit_second_menupath" name="menu_path"
                                        value="{{ i.url }}"
                                        placeholder="请输入菜单路径">
                                 <p style="color: red; display: none;text-align: center" id="second_edit_path_prompt{{ i.nid }}">
@@ -63,3 +62,5 @@
         </div>
     </div>
 </div>
+
+
