--- a/menu_management/templates/tags_html/edit_first_tag.html
+++ b/menu_management/templates/tags_html/edit_first_tag.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                        <button id="edit_btn"  type="submit" class="btn btn-primary">保存</button>
+                        <button id="edit_btn{{ i.nid }}"  type="submit" class="btn btn-primary">保存</button>
                     </div>
                 </div>
             </form>
